force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Update_Reason__c.field-meta.xml
<CustomField>
    <fullName>AVO_Update_Reason__c</fullName>
    <label>Update Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meter Movement</fullName>
            </value>
            <value>
                <fullName>Meter Location Change</fullName>
            </value>
            <value>
                <fullName>Battery Replacement</fullName>
            </value>
            <value>
                <fullName>Retrieval Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>