force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Update_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Update_Type__c</fullName>
    <label>Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clerical Error</fullName>
            </value>
            <value>
                <fullName>Missing Meter</fullName>
            </value>
            <value>
                <fullName>Dead on Site</fullName>
            </value>
            <value>
                <fullName>Retrieved Meter</fullName>
            </value>
            <value>
                <fullName>Double Metered</fullName>
            </value>
            <value>
                <fullName>Duplicate Installation</fullName>
                <isActive>false</isActive>
                <label>Duplicate Installation</label>
            </value>
            <value>
                <fullName>Meter Moved</fullName>
                <isActive>false</isActive>
                <label>Meter Moved</label>
            </value>
            <value>
                <fullName>Off-site Storage</fullName>
                <isActive>false</isActive>
                <label>Off-site Storage</label>
            </value>
            <value>
                <fullName>Tied to Wrong Permit</fullName>
                <isActive>false</isActive>
                <label>Tied to Wrong Permit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>