force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Vanes_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Vanes_Status__c</fullName>
    <label>Vanes Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Vanes Installed</fullName>
            </value>
            <value>
                <fullName>Vanes Not Required</fullName>
            </value>
            <value>
                <fullName>Vanes Required and Not Installed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>