force-app/main/default/objects/AVO_Meter_Transaction__c/fields/Read_Meter__c.field-meta.xml
<CustomField>
    <fullName>Read_Meter__c</fullName>
    <label>Read Meter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>