force-app/main/default/objects/AVO_Meter_Transaction__c/recordTypes/AG_Water_Metering_Installation.recordType-meta.xml
<RecordType>
    <fullName>AG_Water_Metering_Installation</fullName>
    <active>true</active>
    <label>AG Water Metering Installation</label>
</RecordType>