force-app/main/default/objects/AVO_Meter_Transaction__c/recordTypes/Agricultural_Flow_Meter_Approval.recordType-meta.xml
<RecordType>
    <fullName>Agricultural_Flow_Meter_Approval</fullName>
    <active>true</active>
    <label>Agricultural Flow Meter Approval</label>
</RecordType>