force-app/main/default/objects/AVO_Meter_Transaction__c/recordTypes/Batch_Meter_Entry.recordType-meta.xml
<RecordType>
    <fullName>Batch_Meter_Entry</fullName>
    <active>true</active>
    <label>Batch Meter Entry</label>
</RecordType>