force-app/main/default/objects/AVO_Meter_Transaction__c/recordTypes/Batch_Meter_Reading.recordType-meta.xml
<RecordType>
    <fullName>Batch_Meter_Reading</fullName>
    <active>true</active>
    <label>Batch Meter Reading</label>
</RecordType>