force-app/main/default/objects/AVO_Meter_Transaction__c/recordTypes/Meter_Allocation.recordType-meta.xml
<RecordType>
    <fullName>Meter_Allocation</fullName>
    <active>true</active>
    <label>Meter Allocation</label>
</RecordType>