force-app/main/default/objects/AVO_Meter_Transaction__c/recordTypes/Meter_Application.recordType-meta.xml
<RecordType>
    <fullName>Meter_Application</fullName>
    <active>true</active>
    <label>Meter Application</label>
</RecordType>