force-app/main/default/objects/AVO_Meter_Transaction__c/recordTypes/Meter_Entry.recordType-meta.xml
<RecordType>
    <fullName>Meter_Entry</fullName>
    <active>true</active>
    <label>Meter Entry</label>
</RecordType>