force-app/main/default/objects/AVO_Meter_Transaction__c/recordTypes/Meter_Maintenance_Request.recordType-meta.xml
<RecordType>
    <fullName>Meter_Maintenance_Request</fullName>
    <active>true</active>
    <label>Meter Maintenance Request</label>
</RecordType>