force-app/main/default/objects/AVO_Meter_Transaction__c/recordTypes/Meter_Reading.recordType-meta.xml
<RecordType>
    <fullName>Meter_Reading</fullName>
    <active>true</active>
    <label>Meter Reading</label>
</RecordType>