force-app/main/default/objects/AVO_Meter_Transaction__c/recordTypes/Meter_Replacement_Installation.recordType-meta.xml
<RecordType>
    <fullName>Meter_Replacement_Installation</fullName>
    <active>true</active>
    <label>Meter Replacement Installation</label>
</RecordType>