force-app/main/default/objects/AVO_Meter_Transaction__c/recordTypes/Meter_Update.recordType-meta.xml
<RecordType>
    <fullName>Meter_Update</fullName>
    <active>true</active>
    <label>Meter Update</label>
</RecordType>