force-app/main/default/objects/AVO_Meter_Transaction__c/validationRules/AVO_Crop_Type_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Crop_Type_Condition</fullName>
    <active>false</active>
    <description>If (Installation Type = &apos;Replacement&apos; OR  &apos;Retrieval&apos;):
AND Crop Type = blank 
Then this validation will trigger</description>
    <errorConditionFormula>AND(
				OR(
							
								ISPICKVAL(AVO_Installation_Type__c,&apos;Replacement&apos; ),
								ISPICKVAL(AVO_Installation_Type__c,&apos;Retrieval&apos; )
				),
				
				or(
									RecordType.Name = &quot;Meter Reading&quot;,
								 RecordType.Name = &quot;AG Water Metering Installation&quot;
				),
				
				ISBLANK(AVO_Crop_Type__c)
)</errorConditionFormula>
    <errorDisplayField>AVO_Crop_Type__c</errorDisplayField>
    <errorMessage>Crop Type is required</errorMessage>
</ValidationRule>