force-app/main/default/objects/AVO_Meter_Transaction__c/validationRules/AVO_Left_meter_at_site_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Left_meter_at_site_Condition</fullName>
    <active>false</active>
    <description>If (Installation Type = &apos;Replacement&apos; OR &apos;Retrieval&apos;):
AND Left Meter at Site = blank
Then this validation will trigger</description>
    <errorConditionFormula>AND(
		   		OR(
											ISPICKVAL(AVO_Installation_Type__c,&apos;Replacement&apos; ),
					   		 ISPICKVAL(AVO_Installation_Type__c,&apos;Retrieval&apos; )
				   		),
				
				    RecordType.Name = &quot;AG Water Metering Installation&quot;,
 	  		 (AVO_Left_Meter_At_Site__c = false)
)</errorConditionFormula>
    <errorDisplayField>AVO_Left_Meter_At_Site__c</errorDisplayField>
    <errorMessage>Left Meter at Site is required</errorMessage>
</ValidationRule>