force-app/main/default/objects/AVO_Meter_Transaction__c/validationRules/AVO_Old_meter_still_installed_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Old_meter_still_installed_Condition</fullName>
    <active>false</active>
    <description>If (Installation Type = &apos;Replacement&apos; OR  &apos;Retrieval&apos;):
AND Old Meter Still Installed = blank
Then this validation will trigger.</description>
    <errorConditionFormula>AND(
				OR(
								ISPICKVAL(AVO_Installation_Type__c,&apos;Replacement&apos;),
								ISPICKVAL(AVO_Installation_Type__c,&apos;Retrieval&apos; )
				),
				
			 	RecordType.Name = &quot;AG Water Metering Installation&quot;,
				(AVO_Old_Meter_Still_Installed__c = false)
)</errorConditionFormula>
    <errorDisplayField>AVO_Old_Meter_Still_Installed__c</errorDisplayField>
    <errorMessage>Old Meter Still Installed is required.</errorMessage>
</ValidationRule>