force-app/main/default/objects/AVO_Meter_Transaction__c/validationRules/AVO_Other_Crop_Type_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Other_Crop_Type_Condition</fullName>
    <active>false</active>
    <description>If (Installation Type = &apos;Replacement&apos; OR &apos;Retrieval&apos;):
AND Other Crop Type = blank
Then this validation will trigger
Other Crop Type is required.</description>
    <errorConditionFormula>AND(
				OR(
								ISPICKVAL(AVO_Installation_Type__c,&apos;Replacement&apos;),
								ISPICKVAL(AVO_Installation_Type__c,&apos;Retrieval&apos; )
				),
				
				RecordType.Name = &quot;AG Water Metering Installation&quot;,
				ISBLANK(AVO_Other_Crop_Type__c)
)</errorConditionFormula>
    <errorDisplayField>AVO_Other_Crop_Type__c</errorDisplayField>
    <errorMessage>Other Crop Type is required</errorMessage>
</ValidationRule>