force-app/main/default/objects/AVO_Meter_Transaction__c/validationRules/Require_Other_Description_When_Crop_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Other_Description_When_Crop_Type</fullName>
    <active>true</active>
    <description>This validation rule ensures that when &apos;Other&apos; is selected in the AVO Crop Type picklist field, users must provide additional details in the AVO Other Crop Type text field.</description>
    <errorConditionFormula>INCLUDES(AVO_Crop_Type__c, &quot;Other&quot;) &amp;&amp; ISBLANK(AVO_Other_Crop_Type__c)</errorConditionFormula>
    <errorDisplayField>AVO_Other_Crop_Type__c</errorDisplayField>
    <errorMessage>Please provide additional details in the &apos;Other Crop Type&apos; field when &apos;Other&apos; is selected in the Crop Type field.</errorMessage>
</ValidationRule>