force-app/main/default/objects/AVO_Meter_Transaction__c/validationRules/Require_Other_Description_When_Irrigatio.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Other_Description_When_Irrigatio</fullName>
    <active>true</active>
    <description>This validation rule ensures that when &apos;OTHER&apos; is selected in the AVO Irrigation Type multi-picklist field, users must provide additional details in the AVO Irrigation Type Other text field.</description>
    <errorConditionFormula>INCLUDES(AVO_Irrigation_Type__c, &quot;OTHER&quot;) &amp;&amp; ISBLANK(AVO_Irrigation_Type_Other__c)</errorConditionFormula>
    <errorDisplayField>AVO_Irrigation_Type_Other__c</errorDisplayField>
    <errorMessage>Please provide additional details in the &apos;Other&apos; field when &apos;OTHER&apos; is selected in the Irrigation Type.</errorMessage>
</ValidationRule>