force-app/main/default/objects/AVO_Meter_Transaction__c/validationRules/Restrict_Meter_MSN_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Meter_MSN_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(AVO_Maintenance_Type__c, &quot;New Installation Maintenance&quot;) = FALSE, 
    ISPICKVAL(AVO_Maintenance_Type__c, &quot;Meter Replacement&quot;) = FALSE, 
    ISCHANGED(AVO_Meter_ID__c),
    ISPICKVAL(AVO_Type__c, &quot;Meter Maintenance Request&quot;) 
)</errorConditionFormula>
    <errorDisplayField>AVO_Meter_ID__c</errorDisplayField>
    <errorMessage>MSN field cannot be changed unless Type is New Installation Maintenance</errorMessage>
</ValidationRule>