force-app/main/default/objects/AVO_Meter_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AVO_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>AVO_Specialist__c</columns>
    <columns>AVO_Installation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>