force-app/main/default/objects/AVO_Meter_Transaction__c/listViews/GIS_Specialist_AVO_Meter_Transaction1.listView-meta.xml
<ListView>
    <fullName>GIS_Specialist_AVO_Meter_Transaction1</fullName>
    <columns>NAME</columns>
    <columns>AVO_Type__c</columns>
    <columns>AVO_Meter_ID__c</columns>
    <columns>AVO_Installation_Status__c</columns>
    <columns>AVO_Maintenance_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AVO_Installation_Status__c</field>
        <operation>equals</operation>
        <value>GIS Review</value>
    </filters>
    <label>GIS Specialist</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>