force-app/main/default/objects/AVO_Meter_Transaction__c/listViews/Meter_Management_AVO_Meter_Transaction.listView-meta.xml
<ListView>
    <fullName>Meter_Management_AVO_Meter_Transaction</fullName>
    <filterScope>Queue</filterScope>
    <label>Meter Management</label>
    <queue>Meter_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>