force-app/main/default/objects/AVO_Meter_Transaction__c/listViews/Meter_Readings.listView-meta.xml
<ListView>
    <fullName>Meter_Readings</fullName>
    <columns>NAME</columns>
    <columns>AVO_Meter_Reading_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AVO_Meter_Transaction__c.Meter_Reading</value>
    </filters>
    <label>Meter Readings</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>