force-app/main/default/objects/AVO_Meter_Transaction__c/listViews/Meter_Replacement_Installations.listView-meta.xml
<ListView>
    <fullName>Meter_Replacement_Installations</fullName>
    <columns>NAME</columns>
    <columns>AVO_Maintenance_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AVO_Type__c</field>
        <operation>equals</operation>
        <value>Meter Replacement Installation</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AVO_Meter_Transaction__c.Meter_Replacement_Installation</value>
    </filters>
    <label>Meter Replacement Installations</label>
</ListView>