force-app/main/default/objects/AVO_Meter_Transaction__c/listViews/Metering_AVO_Meter_Transaction1.listView-meta.xml
<ListView>
    <fullName>Metering_AVO_Meter_Transaction1</fullName>
    <filterScope>Queue</filterScope>
    <label>Metering</label>
    <queue>Metering</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>