force-app/main/default/objects/AVO_Meter_Transaction__c/listViews/My_Meter_Allocations.listView-meta.xml
<ListView>
    <fullName>My_Meter_Allocations</fullName>
    <columns>NAME</columns>
    <columns>AVO_Meter_Maintenance_ID__c</columns>
    <columns>AVO_Meter_ID__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AVO_Type__c</field>
        <operation>equals</operation>
        <value>Meter Allocation</value>
    </filters>
    <label>My Meter Allocations</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>