force-app/main/default/objects/AVO_Meter_Transaction__c/listViews/My_Meter_Approvals.listView-meta.xml
<ListView>
    <fullName>My_Meter_Approvals</fullName>
    <columns>NAME</columns>
    <columns>AVO_Type__c</columns>
    <columns>AVO_Installation_Status__c</columns>
    <columns>AVO_Inventory_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AVO_Meter_Transaction__c.Agricultural_Flow_Meter_Approval</value>
    </filters>
    <label>My Meter Approvals</label>
</ListView>