force-app/main/default/objects/AVO_Meter_Transaction__c/listViews/My_Meter_Installations.listView-meta.xml
<ListView>
    <fullName>My_Meter_Installations</fullName>
    <columns>NAME</columns>
    <columns>AVO_Type__c</columns>
    <columns>AVO_Installation_Status__c</columns>
    <columns>AVO_Installation_Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AVO_Type__c</field>
        <operation>equals</operation>
        <value>AG Water Metering Installation</value>
    </filters>
    <label>My Meter Installations</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>