force-app/main/default/objects/AVO_Meter_Transaction__c/listViews/My_Meter_Maintenance_Requests.listView-meta.xml
<ListView>
    <fullName>My_Meter_Maintenance_Requests</fullName>
    <columns>NAME</columns>
    <columns>AVO_Maintenance_Type__c</columns>
    <columns>AVO_Maintenance_Status__c</columns>
    <columns>AVO_Maintenance_Batch_ID__c</columns>
    <columns>AVO_Details__c</columns>
    <columns>AVO_Specialist__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AVO_Type__c</field>
        <operation>equals</operation>
        <value>Meter Maintenance Request</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AVO_Meter_Transaction__c.Meter_Maintenance_Request</value>
    </filters>
    <label>Meter Maintenance Requests</label>
</ListView>